changed names of files

--- a/index.html
+++ b/index.html
@@ -1,33 +1,19 @@
 <!DOCTYPE html>
-
-<html>
-    <head>
-        <title>WDD | Home</title>
-    </head>
-    <body>
-       <header> <h1>Connor Hobbs | WDD130 Project</h1>
-        <nav></nav>
-            <a href="wwr/index.html">White Water Rafting Website</a>
-            <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-            <a href="positioning.html">Positioning Activity</a>
-            <a href="#">Personal Website</a>
-            <a href="#">Personal Siteplan</a>
-        </nav>
-    </header>
-
-        <img src="20240610_221939.jpg" width ="300" height ="400" alt="This is my sister's cat, Luka. He is fat.">
-        <p>This is my sister's cat, Luka. He is fat.</p>
-        <p>Hello! My name is Connor Hobbs, and I'm from Tennessee. 
-            I'm studying software engineering, and I enjoy
-            pumping iron, crushing chumps at pickleball, 
-            and baking apple pie that'll put your grandma to shame. I
-            grew up in the church and served a spanish speaking mission in Utah. I am single.
-        </p>
-        <p>I defintely love the scripture John 14:27. The Savior talks about the peace He gives us and that means
-            a lot to me.
-        </p>
-        <p>"Peace I leave with you, my peace I give unto you: not as the world giveth, 
-            give I unto you. Let not your heart be troubled, neither let it be afraid."
-        </p>
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>WDD130 Home Page</title>
+</head>
+<body>
+    <h1>Welcome to WDD130 Web Projects</h1>
+    <nav>
+      <a href="wwr/index.html">White Water Rafting Website</a>
+      <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+      <a href="positioning.html">Positioning Activity</a>
+      <a href="#">Personal Website</a>
+      <a href="#">Personal Siteplan</a>
+    </nav>  
+    <p>Connor Hobbs - WDD130</p>   
+</body>
 </html>
