changed color, fonts, and logo

--- a/wwr/site-planning-rafting.html
+++ b/wwr/site-planning-rafting.html
@@ -11,9 +11,9 @@
 
 <body>
   <header>
-    <h1>[Site name] Site Plan</h1>
-    <h2>[FirstName LastName]</h2>
-    <h2>WDD 130</h2>
+    <h1>River Rapids Site Plan</h1>
+    <h2>Connor Hobbs</h2>
+    <h2>WDD 130-01</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -21,18 +21,24 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[Your purpose here]</p>
+    <p>Here at River Rapids, our mission is to provide excellent resources, guides, and a community that
+        permit our clients to have the best white water rafting experience possible.</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[Your audience here]</p>
+    <p>We aim to support rafting enthusiats of all levels. Whether you're a beginner or seasoned pro,
+        there something here for everyone! We provide packages for families that wish to have a fun day
+        out on the water, starters who want to get into a new hobby without breaking the bank, and additional
+        training for the pros out there to enhance their safety and rescue capabilities. We provide affordable 
+        merchandise and tools for rafters of all capacities. Please visit our website or download the app!
+    </p>
     <!-- change this -->
 
     <hr />
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo image" />
+    <img src="images/Rapids_logo2.jpg" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
@@ -63,16 +69,16 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Font Name here]
+      Heading Font: Pacifico
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Font Name here]
+      Paragraph Font: Fredoka
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
     <p>
-      The best Whitewater Rafting in Colorado, White Water Rafting Company
+      The best Whitewater Rafting in Colorado, River Rapids
       offers rafting on the Colorado and Roaring Fork Rivers in Glenwood
       Springs. Since 1974, we have been family owned and operated, rafting the
       Shoshone section of Glenwood Canyon and beyond.
@@ -81,7 +87,7 @@
     <p class="colored">
       Trips vary from mild and great for families, to trips exclusively for
       physically fit and experienced rafters. No matter what type of river
-      adventures you are seeking, White Water Rafting Company can make it
+      adventures you are seeking, River Rapids can make it
       happen for you.
     </p>
 
