--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting Vacations | River Rapids | Home</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
+    <div id="content">
     <header>
         <a id="logo_link" href="index.html">
             <img class="logo" src="images/Rapids_logo2.jpg" alt="River Rapids Logo">
@@ -22,7 +24,7 @@
             <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
         </div>
         <section id="hero-msg">
-            <h1 class="home-title">Have An Adventure</h1>
+            <h1 class="home-title"> Have An Adventure</h1>
             <h4>Make Memories with River Rapids</h4>
             <div class='button-box'>
                 <a class='book' href="contactus.html">Book Now</a>
@@ -31,23 +33,24 @@
     </div>
     <main class="home-grid">
         <section class="rivers-card">
-            <h2>Rivers</h2>
             <img class="card-img" src="images/rivers.jpg" alt="river in forest">
             <img class="icon" src="images/river_icon.png" alt="river icon">
+            <h2>Rivers</h2>
         </section>
         <section class="camping-card">
-            <h2>Camping</h2>
             <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
             <img class="icon" src="images/fire_icon.png" alt="fire icon">
+            <h2>Camping</h2>
         </section>
         <section class="rapids-card">
-            <h2>Rapids</h2>
             <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
             <img class="icon" src="images/oars.png" alt="oars icon">
+            <h2>Rapids</h2>
         </section>
-        <h2>More Than Just The Thrill</h2>
+        <div id="background"></div>
         <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
         <section class="msg">
+            <h2>More Than Just The Thrill</h2>
             <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
             <a class='join' href="rivers.html">Join Us</a>
         </section>
@@ -57,15 +60,16 @@
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
-            <a href="https://facebook.com">
+            <a href="https://facebook.com" target="_blank">
                 <img src="images/facebook.png" alt="fb icon">
             </a>
-            <a href="https://twitter.com">
+            <a href="https://twitter.com" target="_blank">
                 <img src="images/twitter.png" alt="twitter icon">
             </a>
-            <a href="https://instagram.com">
+            <a href="https://instagram.com" target="_blank">
                 <img src="images/instagram.png" alt="instagram icon">
             </a>
         </div>
     </footer>
+    </div>
     </body>
