--- a/ice2/index.html
+++ b/ice2/index.html
@@ -4,21 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="styles/ice2.css">
+    <link rel="stylesheet" type="text/css" href="styles/styles/ice2.css">
 </head>
 <body>
     <header>
         <img class="title" src="images/w05_circlestitle.jpg" alt="title banner">
     </header>
-    <header>
-        <img class="desk" src="images/w05_ice_image_desk.jpg" alt="desk">
-    </header>
-    <header>
-        <img class="graphic" src="images/w05_ice_image_graphic.png" alt="graphic">
-    </header>
-    <header>
-        <img class="person" src="images/w05_ice_image_person.jpg" alt="man is thinking">
-    </header>
-    
+    <div class="row">
+        <div class="column">
+        <div id="desk">
+        <header>
+            <img class="desk" src="images/w05_ice_image_desk.jpg" alt="desk">
+        </header>
+        </div>
+        </div>
+        <div class="column">
+        <div id="grahpic">
+        <header>
+            <img class="graphic" src="images/w05_ice_image_graphic.png" alt="graphic">
+        </header>
+        </div>
+        </div>
+        <div class="column">
+        <div id="person">
+        <header>
+            <img class="person" src="images/w05_ice_image_person.jpg" alt="man is thinking">
+        </header>
+        </div>
+        </div>
+    </div>
+
 </body>
 </html>
