--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -122,7 +122,8 @@
 
     <h3>[Page 2]</h3>
 
-    <!-- <img src="#" alt="page 2 wireframe"> -->
+    <img src="https://wireframe.cc/Sbecuk" alt="https://wireframe.cc/Sbecuk"> 
+    <img src="images/page2wireframe.png" alt="page2wireframe">
   </main>
 </body>
 </html>
