--- a/practice/photos.html
+++ b/practice/photos.html
@@ -5,6 +5,6 @@
     <title>Document</title>
  </head>
  <body>
-    <img src="w08_teton_mountains.jpg" alt="tetons" width="500">
+    <img src="w08_teton_mountains2.jpg" alt="tetons" width="500">
  </body>
  </html>
