--- a/fanimehoodies/site-plan.html
+++ b/fanimehoodies/site-plan.html
@@ -120,29 +120,31 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        People will come to my website to buy anime themed hoodies. The homepage will have a list of popular animes
+        people can choose from. Once they choose their favorite show, we'll transfer them to a page with the available
+        hoodies and sweaters for that show.
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
-
+        <img src="images/jjk.png" alt="jjk logo">
+        <img src="images/naruto.png" alt="naruto logo">
+        <img src="images/onepiece.png" alt="onepiece logo">
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Customize</h3>
       <p>
-        [Written copy for the Page 2 here]
+         This will be the customization menu of the hoodies and sweaters. Customers can change color of their clothes here.
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/hoodieyellow.jpg" alt="hoodiwy">
+        <img src="images/hoodiewhite.jpg" alt="hoodiew">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Shopping Cart</h3>
       <p>
-        [Written copy for the Page 3 here]
+        This will be the page where customers pay for their items. This is the shopping cart. 
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/cart.jpg" alt="cart">
+        
 
       </ul>
       <hr>
