--- a/fanimehoodies/site-plan.html
+++ b/fanimehoodies/site-plan.html
@@ -57,10 +57,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font:   <!-- change this -->
+        Heading Font: Playfair Display  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font:   <!-- change this -->
+        Paragraph Font: Source Sans Pro  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
@@ -158,19 +158,19 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/wireframehome.png" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/wireframepage2.png" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/wireframepage3.png" alt="page 3 wireframe">
     </main>
   </body>
 
