--- a/fanimehoodies/hoodies.html
+++ b/fanimehoodies/hoodies.html
@@ -11,7 +11,7 @@
             <img class="logo" src="images/hoodielogo.png" alt="Fanime Hoodies Logo">
         </a>
         <nav>
-            <a href="index.html">Home</a>
+            <a href="fanimeindex.html">Home</a>
             <a href="hoodies.html">Hoodies</a>
             <a href="site-plan.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
