--- a/fanimehoodies/hoodies.html
+++ b/fanimehoodies/hoodies.html
@@ -14,7 +14,7 @@
             <a href="fanimeindex.html">Home</a>
             <a href="hoodies.html">Hoodies</a>
             <a href="site-plan.html">Site Plan</a>
-            <a href="contactus.html">Contact Us</a>
+            <a href="cart.html">Cart</a>
         </nav>
     </header>
 
