--- a/fanimehoodies/fanimeindex.html
+++ b/fanimehoodies/fanimeindex.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Personal Site</title>
+    <link rel="stylesheet" type="text/css" href="fanimecss.css"/>
 </head>
 <body>
     <header>
