--- a/fanimehoodies/fanimeindex.html
+++ b/fanimehoodies/fanimeindex.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Site</title>
-    <link rel="stylesheet" type="text/css" href="fanimecss.css"/>
+    <link rel="stylesheet" type="text/css" href="styles/fanimecss.css"/>
 </head>
 <body>
     <header>
-        <a id="logo_link" href="index.html">
+        <a id="logo_link" href="fanimeindex.html">
             <img class="logo" src="images/hoodielogo.png" alt="Fanime Hoodies Logo">
         </a>
         <nav>
