--- a/fanimehoodies/fanimeindex.html
+++ b/fanimehoodies/fanimeindex.html
@@ -24,24 +24,29 @@
         </div>
         <section id="hero-msg">
             <h1 class="home-title"> Fanime Hoodies</h1>
-            <h4></h4>
         </section>
     </div>
 
+    
     <main class="home-grid">
-        <section class="jjk-card">
-            <img class="card-img" src="images/gojo.webp" alt="jjk pic">
-            <h2>JJK</h2>
-        </section>
-        <section class="nar-card">
-            <img class="card-img" src="images/naruto.jpeg" alt="nar pic">
-            <h2>Naruto</h2>
-        </section>
-        <section class="rapids-card">
-            <img class="card-img" src="images/op.webp" alt="op pic">
-            <h2>OP</h2>
-        </section>
+        <div class="row">
+            <div class="column">
+                <section class="jjk-card">
+                    <img class="card-img" src="images/gojo.webp" alt="jjk pic">
+                    <h2>JJK</h2>
+                 </section>
+                 <section class="nar-card">
+                    <img class="card-img" src="images/naruto.jpeg" alt="nar pic">
+                    <h2>Naruto</h2>
+                 </section>
+                 <section class="op-card">
+                    <img class="card-img" src="images/opimg.webp" alt="op pic">
+                    <h2>OP</h2>
+                 </section>
+            </div>
+        </div>
     </main>
+
 
     <footer>
         <p>Fanime Hoodies &copy; 2024 - Connor Hobbs</p>
