--- a/fanimehoodies/hoodies.html
+++ b/fanimehoodies/hoodies.html
@@ -16,7 +16,9 @@
             <a href="hoodies.html">Hoodies</a>
             <a href="site-plan.html">Site Plan</a>
             <a href="cart.html">Cart</a>
+            <input type="text" name="search" placeholder="Search..">
         </nav>
+        
     </header>
 
     <main class="home-grid">
