--- a/index.html
+++ b/index.html
@@ -5,18 +5,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD130 Home Page</title>
-
-    
+    <link rel="stylesheet" type="text/css" href="landingpage.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400..900&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>Welcome to WDD130 Web Projects</h1>
     <nav>
-      <a href="wwr/index.html">White Water Rafting Website</a>
-      <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-      <a href="positioning.html">Positioning Activity</a>
-      <a href="fanimehoodies/fanimeindex.html">Personal Website</a>
-      <a href="fanimehoodies/site-plan.html">Personal Siteplan</a>
-    </nav>  
+      <div class="nav-item">
+          <img src="landingpagestyles/wws.jpg" alt="White Water Rafting" class="nav-img">
+          <a href="wwr/index.html">White Water Rafting Website</a>
+      </div>
+      <div class="nav-item">
+          <img src="landingpagestyles/wwsp.jpg" alt="Rafting Siteplan" class="nav-img">
+          <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+      </div>
+      <div class="nav-item">
+          <img src="landingpagestyles/pa.webp" alt="Positioning Activity" class="nav-img">
+          <a href="positioning.html">Positioning Activity</a>
+      </div>
+      <div class="nav-item">
+          <img src="landingpagestyles/ps.webp" alt="Personal Website" class="nav-img">
+          <a href="fanimehoodies/fanimeindex.html">Personal Website</a>
+      </div>
+      <div class="nav-item">
+          <img src="landingpagestyles/psp.jfif" alt="Personal Siteplan" class="nav-img">
+          <a href="fanimehoodies/site-plan.html">Personal Siteplan</a>
+      </div>
+    </nav>
     <p>Connor Hobbs - WDD130</p>   
 </body>
 </html>
