--- a/fanimehoodies/fanimeindex.html
+++ b/fanimehoodies/fanimeindex.html
@@ -16,6 +16,7 @@
             <a href="hoodies.html">Hoodies</a>
             <a href="site-plan.html">Site Plan</a>
             <a href="cart.html">Cart</a>
+            <input type="text" name="search" placeholder="Search..">
         </nav>
     </header>
     <div id="hero">
